# rustpodcasts_old

./: .env  Cargo.toml  README.md  rustpodcasts.db
migrations/2020-12-29-181728_create_series/: down.sql  up.sql
migrations/2020-12-29-182702_create_episodes/: down.sql  up.sql
src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs  state.rs
src/db/: model_episodes.rs  model_series.rs  schema.rs
src/db/model_episodes/: episode_test.rs
src/db/model_series/: serie_test.rs
