[package]
name = "rustpodcasts"
version = "0.1.0"
edition = "2021"
authors = ["mavallad"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Actix web framework and run-time
actix-web = "3.3.0"
actix-rt = "2.2.0"

# Data serialization library
serde = { version = "1.0.130", features = ["derive"] }
# Other utilities
chrono = {version = "0.4.19", features = ["serde"]}
